libgimpbase: Find thread ID on FreeBSD with thr_self

https://bugzilla.gnome.org/show_bug.cgi?id=795510